--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,6 +2,7 @@
 	"extends": "next/core-web-vitals",
 	"rules": {
 		// Other rules
+		"react/no-unescaped-entities": 0,
 		"@next/next/no-img-element": "off"
 	}
 }
